--- a/index.html
+++ b/index.html
@@ -253,6 +253,15 @@
                 </div>
                 
             </section>
+
+            <section class="section-book">
+                <div class="row">
+                    <div class="book">
+
+                    </div>
+                </div>
+            </section>
+
         </main>
 
 <!--GRELHA TESTE
