--- a/index.html
+++ b/index.html
@@ -301,6 +301,35 @@
 
         </main>
 
+        <footer class="footer">
+            <div class="footer__logo-box">
+                <img src="img/logo-green-2x.png" alt="Full Logo" class="footer__logo">
+            </div>
+            <div class="row">
+                <div class="col-1-of-2">
+                    <div class="footer__navigation">
+                        <ul class="footer__list">
+                            <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Contact Us</a></footer__item>
+                            <li class="footer__item"><a href="#" class="footer__link">Careers</a></footer__item>
+                            <li class="footer__item"><a href="#" class="footer__link">Privacy</a></footer__item>
+                            <li class="footer__item"><a href="#" class="footer__link">Terms</a></footer__item>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-1-of-2">
+                        <p class="footer__copyright">
+                        Built my <a href="#" class="footer__link">João Ramos</a> for this online course 
+                         <a href="#" class="footer__link">advanced CSS and SASS</a>
+                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est nam tenetur cumque labore 
+                         sed earum dignissimos minima fugiat temporibus aliquid, perspiciatis, similique adipisci 
+                         quaerat? Perferendis veniam aspernatur id nam eaque?
+                    </p>
+                </div>
+            </div>
+
+        </footer>
+
 <!--GRELHA TESTE
         <section class="grid-test">
             <div class="row">
